# lywr

lywr/: CMakeLists.txt  build.cmd  dev.sh
lywr/src/: Makefile  build_switch_case.py  lywr.h  lywr.hh  lywr_call.c  lywr_data.c  lywr_data.hh  lywr_defs.c  lywr_defs.h  lywr_exec.c  lywr_exec.hh  lywr_expr.c  lywr_expr.hh  lywr_kernel.c  lywr_loader.c  lywr_mempool.c  lywr_mempool.h  lywr_opcode.c  lywr_opcode.h  lywr_rbtree2.c  lywr_rbtree2.h  lywr_stream.c  lywr_stream.hh  lywr_util.c  lywr_util.hh  lywr_wasm_types.c  lywr_wasm_types.hh  opcodes.txt
lywr/src/app/: test_bc.c
lywr/testsuite/: O2.js  O2.wasm  O2.wat  fib.c  fib.java  fib.js  fib.wasm  fib.wat  main.c  nodebuginfo.js  nodebuginfo.wasm  nodebuginfo.wat  plus.c  plus.wasm  plus.wat  wasm.py  withdebuginfo.js  withdebuginfo.wasm  withdebuginfo.wat
